--- a/templates/base.html
+++ b/templates/base.html
@@ -3,11 +3,16 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
+
+    <!-- Title defined in index file -->
     <title>{% block title %}{% endblock %}</title>
+
+    <!-- css files -->
     <link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.6/css/bootstrap.min.css">
     <link rel="stylesheet" href="/static/css/style.css">
 </head>
 <body>
+    <!-- nav bar -->
     <nav class="navbar navbar-default navbar-fixed-top">
       <div class="container">
         <!-- Brand and toggle get grouped for better mobile display -->
@@ -21,7 +26,7 @@
             {% if user %}
           <a class="navbar-brand" href="/author/{{ user }}" title="Your Posts">{{ user }}</a>
             {% else %}
-          <a class="navbar-brand" href="/" title="Home">Blogger</a>
+          <a class="navbar-brand" href="/" title="Home">Developer</a>
             {% endif %}
         </div>
 
@@ -53,6 +58,7 @@
 </div>
 </body>
 <footer>
+  <!-- js files -->
     <script src="https://code.jquery.com/jquery-1.12.4.min.js"
             integrity="sha256-ZosEbRLbNQzLpnKIkEdrPv7lOy9C27hHQ+Xp8a4MxAQ="
             crossorigin="anonymous"></script>
