--- a/templates/comment_edit.html
+++ b/templates/comment_edit.html
@@ -1,6 +1,6 @@
 {% extends 'base.html' %}
 
-{% block title %}Blogger | Edit{% endblock %}
+{% block title %}Developer | Edit{% endblock %}
 
 {% block content %}
     {% from "__formhelpers.html" import render_form %}
