--- a/templates/index.html
+++ b/templates/index.html
@@ -1,6 +1,6 @@
 {% extends "base.html" %}
 
-{% block title %}Blogger{% endblock %}
+{% block title %}Developer{% endblock %}
 
 {% block content %}
     <div class="row">
