--- a/templates/post.html
+++ b/templates/post.html
@@ -1,6 +1,6 @@
 {% extends 'base.html' %}
 
-{% block title %}Blogger | View{% endblock %}
+{% block title %}Developer | View{% endblock %}
 
 {% block content %}
     {% from "__formhelpers.html" import render_form %}
