--- a/templates/post_create.html
+++ b/templates/post_create.html
@@ -1,6 +1,6 @@
 {% extends 'base.html' %}
 
-{% block title %}Blogger | Create{% endblock %}
+{% block title %}Developer | Create{% endblock %}
 
 {% block content %}
     {% from "__formhelpers.html" import render_form %}
