--- a/templates/post_delete.html
+++ b/templates/post_delete.html
@@ -1,6 +1,6 @@
 {% extends 'base.html' %}
 
-{% block title %}Blogger | Delete{% endblock %}
+{% block title %}Developer | Delete{% endblock %}
 
 {% block content %}
     {% from "__formhelpers.html" import render_form %}
