--- a/templates/user_login.html
+++ b/templates/user_login.html
@@ -1,6 +1,6 @@
 {% extends 'base.html' %}
 
-{% block title %}Blogger | Login{% endblock %}
+{% block title %}Developer | Login{% endblock %}
 
 {% block content %}
     {% from "__formhelpers.html" import render_form %}
