--- a/templates/user_register.html
+++ b/templates/user_register.html
@@ -1,6 +1,6 @@
 {% extends 'base.html' %}
 
-{% block title %}Blogger | Register{% endblock %}
+{% block title %}Developer | Register{% endblock %}
 
 {% block content %}
     {% from "__formhelpers.html" import render_form %}
